--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,10 @@
     tools:openDrawer="start">
 
     <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/container"/>
+        />
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
@@ -32,7 +33,7 @@
         android:paddingLeft="0dp"
         android:paddingRight="0dp"
         android:paddingTop="0dp"
-        tools:context="com.rtmillerprojects.giftideareminder.MainActivity">
+        tools:context=".UI.MainActivity">
 
         <android.support.design.widget.TabLayout
             android:layout_width="match_parent"
