--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
+        android:background="@color/secondaryGreen"
         app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/activity_main_drawer"/>
 
@@ -40,7 +41,7 @@
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
-                    android:background="?attr/colorPrimary"
+                    android:background="@color/primeGreen"
                     app:popupTheme="@style/AppTheme.PopupOverlay"
                     app:layout_scrollFlags="scroll|enterAlways">
                 </android.support.v7.widget.Toolbar>
@@ -53,7 +54,7 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     app:tabGravity="fill"
-                    android:background="#394db3" />
+                    android:background="@color/secondaryGreen" />
 
             </android.support.design.widget.AppBarLayout>>
 
