--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="@dimen/nav_header_height"
-              android:background="@drawable/side_nav_bar"
+              android:background="@color/primeGreen"
               android:paddingBottom="@dimen/activity_vertical_margin"
               android:paddingLeft="@dimen/activity_horizontal_margin"
               android:paddingRight="@dimen/activity_horizontal_margin"
@@ -22,18 +22,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Full name"
+        android:text="Ryan Miller"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:id="@+id/header_name"
         android:textColor="#FFFFFF"
         />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="\@username"
-        android:id="@+id/header_username"
-        android:textColor="#FFFFFF"
-        />
 
 </LinearLayout>
