--- a/app/src/main/res/layout/nav_drawer_base.xml
+++ b/app/src/main/res/layout/nav_drawer_base.xml
@@ -13,6 +13,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/colorAccent"
         android:id="@+id/container"/>
 
     <android.support.design.widget.NavigationView
@@ -25,5 +26,3 @@
         app:menu="@menu/activity_main_drawer"/>
 
 </android.support.v4.widget.DrawerLayout>
-
-
