--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -16,14 +16,15 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:elevation="5dp"
-            android:background="@color/colorPrimary">
+            android:background="@color/colorPrimaryDark">
         </android.support.v7.widget.Toolbar>
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:background="@color/colorPrimaryDark"
+            android:layout_height="wrap_content"
+            android:elevation="2dp"/>
 
     </android.support.design.widget.AppBarLayout>
 
