--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF5722</color>
+    <color name="colorPrimary">#89C35C</color>
+    <color name="colorPrimaryDark">#4CC552</color>
+    <color name="colorAccent">#F88158</color>
     <color name="primaryText">#212121</color>
     <color name="secondaryText">#727272</color>
     <color name="primeGreen">#006600</color>
