progress on agenda fragment, adapter, and sql

--- a/app/src/main/res/layout/row_agenda_item.xml
+++ b/app/src/main/res/layout/row_agenda_item.xml
@@ -1,6 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="62dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="2dp"
+    android:paddingBottom="2dp"
+    android:clickable="true"
+    android:background="?attr/selectableItemBackground">
 
-</LinearLayout>
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:id="@+id/agenda_row_photo"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="16dp"/>
+
+    <LinearLayout
+        android:id="@+id/agenda_row_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/agenda_row_photo"
+        android:orientation="horizontal"
+        android:layout_centerVertical="true"
+        android:weightSum="6"
+        >
+
+
+        <LinearLayout
+            android:id="@+id/agenda_stacked_text_container"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="75dp"
+            android:layout_weight="5"
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/agenda_item_title"
+                android:text="Event Title"
+                android:textSize="16sp"
+                android:singleLine="true"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/agenda_item_subheader"
+                android:text=""
+                android:textSize="12sp"
+                android:singleLine="true"
+                android:textColor="@color/secondaryText"/>
+
+        </LinearLayout>
+
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/agenda_item_counter"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_gravity="center"
+                android:background="@drawable/circle"
+                android:gravity="center"
+                android:shadowColor="@android:color/white"
+                android:shadowRadius="10.0"
+                android:text="7"
+                android:textColor="@android:color/black"
+                android:textSize="18sp" />
+
+        </FrameLayout>
+
+    </LinearLayout>
+
+
+
+</RelativeLayout>
