--- a/app/src/main/res/layout/row_contact.xml
+++ b/app/src/main/res/layout/row_contact.xml
@@ -62,6 +62,7 @@
             android:orientation="vertical" >
 
             <TextView
+                android:id="@+id/contact_item_counter"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_gravity="center"
