--- a/app/src/main/res/layout/gifts_fragment.xml
+++ b/app/src/main/res/layout/gifts_fragment.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="1">
 
     <TextView
         android:layout_width="wrap_content"
@@ -16,5 +17,12 @@
         android:text="New Button"
         android:id="@+id/btn_take_picture"
         android:layout_gravity="center_horizontal" />
+
+    <ImageView
+        android:layout_width="94dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView2"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.22" />
 
 </LinearLayout>
