--- a/app/src/main/res/layout/edit_event.xml
+++ b/app/src/main/res/layout/edit_event.xml
@@ -41,6 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:paddingLeft="10dp"
                 android:paddingTop="@dimen/view_spacing_small">
 
                 <TextView
@@ -51,17 +52,20 @@
                     android:id="@+id/agenda_item_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Hello"
+                    android:text=""
+                    android:hint="@string/hint_event_title"
                     />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Event Date"/>
+                    android:text="Event Date"
+
+                    />
                 <EditText
                     android:id="@+id/selectedDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Here is the date"/>
+                    android:hint="@string/hint_event_date"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -87,6 +91,9 @@
                     android:visibility="invisible">
 
                 </FrameLayout>
+
+
+
             </LinearLayout>
         </ScrollView>
 
