--- a/app/src/main/res/layout/agenda_fragment.xml
+++ b/app/src/main/res/layout/agenda_fragment.xml
@@ -11,11 +11,11 @@
         android:id="@+id/recycler_view"/>
 
     <TextView
-        android:id="@+id/agendaText"
+        android:id="@+id/noEventsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Calendar View"
+        android:text="No events have been added yet"
         android:textSize="30sp"
         android:textAlignment="center"
         android:layout_marginBottom="36dp"
